# cw_affixes

./: .flake8  Makefile  README.md  cw_ngrams.py  generate_all_ngram_files.py  generate_ngrams_from_scenario.py  generate_results.py  pyproject.toml
cw_ngrams/: __init__.py  cli.py  cw.py  data.py  output.py
data/: most_common_words.txt
results/: 2-gram_random_200_affixes_sorted_shuffled.txt  2-gram_random_200_prefixes_sorted_shuffled.txt  2-gram_random_200_suffixes_sorted_shuffled.txt  2-gram_top_100_affixes.txt  2-gram_top_100_prefixes.txt  2-gram_top_100_suffixes.txt  2-gram_top_affixes.txt  2-gram_top_prefixes.txt  2-gram_top_suffixes.txt  3-gram_dissimilar_prefixes.txt  3-gram_dissimilar_suffixes.txt  3-gram_dissimilar_weighted_prefixes.txt  3-gram_dissimilar_weighted_suffixes.txt  3-gram_random_200_affixes_sorted_shuffled.txt  3-gram_random_200_prefixes_sorted_shuffled.txt  3-gram_random_200_suffixes_sorted_shuffled.txt  3-gram_random_affixes_sorted_shuffled.txt  3-gram_random_prefixes_sorted_shuffled.txt  3-gram_random_suffixes_sorted_shuffled.txt  3-gram_similar_prefixes.txt  3-gram_similar_suffixes.txt  3-gram_similar_weighted_prefixes.txt  3-gram_similar_weighted_suffixes.txt  3-gram_top_100_affixes.txt  3-gram_top_100_prefixes.txt  3-gram_top_100_suffixes.txt  3-gram_top_affixes.txt  3-gram_top_prefixes.txt  3-gram_top_suffixes.txt  4-gram_random_200_affixes_sorted_shuffled.txt  4-gram_random_200_prefixes_sorted_shuffled.txt  4-gram_random_200_suffixes_sorted_shuffled.txt  4-gram_random_affixes_sorted_shuffled.txt  4-gram_random_prefixes_sorted_shuffled.txt  (+8 more)
