[tool.poetry]
name = "cw_grams"
version = "0.1.0"
description = ""
authors = ["Quentin Caudron <quentincaudron@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
thefuzz = "^0.19"
python-Levenshtein = "^0.20"
numpy = "^1.23"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 99

[tool.black]
line-length = 99